--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <canvas width="600" height="600" style="width: 800px; height: 600px;">
+
+      </canvas>
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
