--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,9 +8,6 @@
   </head>
   <body>
     <div id="app">
-      <canvas width="600" height="600" style="width: 800px; height: 600px;">
-
-      </canvas>
     </div>
     <script type="module" src="/src/main.js"></script>
   </body>
